--- a/src/app/team/board/_components/voteContainer.css
+++ b/src/app/team/board/_components/voteContainer.css
@@ -1,7 +1,7 @@
 /* VoteContainer */
 .vote-container {
   width: 90%;
-  border: 1px solid #5c665f;
+  border: 1px solid #191919;
   border-radius: 8px;
   margin: 16px auto;
   padding: 8px;
@@ -13,7 +13,7 @@
 
   /* Background with conic-gradient */
   background: conic-gradient(
-    #292d23 calc(var(--percent) * 3.6deg),
+    #bea1d7 calc(var(--percent) * 3.6deg),
     white 0deg
   );
 }
@@ -26,7 +26,7 @@
   align-items: center;
 
   width: calc(100% - 16px);
-  border: 1px solid #5c665f;
+  border: 1px dotted #5c665f;
   border-radius: 8px;
   padding: 8px;
 }
@@ -41,7 +41,7 @@
 }
 
 .inner-container.team-p {
-  background-color: #7661fb;
+  background-color: #9966cc;
   color: #fff;
 }
 
