하단바 추가로 인한 바텀 공백 추가

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -78,6 +78,10 @@
   font-family: "SUITE";
 }
 
+body {
+  padding-bottom: 30px;
+}
+
 /* Title (h) */
 .title-font {
   /* font-family: title !important; */
