--- a/src/app/global.css
+++ b/src/app/global.css
@@ -47,6 +47,10 @@
   font-family: "Jua";
   src: url("/font/Jua-Regular.ttf");
 }
+@font-face {
+  font-family: "Hubballi";
+  src: url("/font/Hubballi-Regular.ttf");
+}
 /* // === font === */
 
 
